// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если есть привязанные карты то нарисует брэнд первой из них 1`] = `
<div
  className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_mastercard BillingPaymentMethods__tile_active BillingPaymentMethods__tile_lastRow"
  data-method-id="bank_card"
  key="bank_card"
  onClick={[Function]}
>
  <div
    className="BillingPaymentMethods__tileText"
  >
    Банковская карта
  </div>
</div>
`;

exports[`если есть привязанные карты, но бренд не распарсили, не упадёт 1`] = `
<div
  className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_bank_card BillingPaymentMethods__tile_active BillingPaymentMethods__tile_lastRow"
  data-method-id="bank_card"
  key="bank_card"
  onClick={[Function]}
>
  <div
    className="BillingPaymentMethods__tileText"
  >
    Банковская карта
  </div>
</div>
`;

exports[`если пользователь нажал на тогглер откроется выпадашка с остальными методами 1`] = `
<BillingPaymentMethods
  canChangeMethod={true}
  error={Object {}}
  isMobile={false}
  onMethodChange={[Function]}
  paymentMethods={
    Array [
      Object {
        "id": "bank_card",
        "name": "Банковская карта",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "sberbank",
        "name": "Сбербанк Онлайн",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "yandex_money",
        "name": "Яндекс.Деньги",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "qiwi",
        "name": "QIWI Кошелек",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "webmoney",
        "name": "Webmoney",
        "ps_id": "YANDEXKASSA_V3",
      },
    ]
  }
  selectedMethodId="bank_card"
>
  <div
    className="BillingPaymentMethods BillingPaymentMethods_expanded"
  >
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_bank_card BillingPaymentMethods__tile_active"
      data-method-id="bank_card"
      key="bank_card"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Банковская карта
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_sberbank"
      data-method-id="sberbank"
      key="sberbank"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Сбербанк Онлайн
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_toggler"
      data-method-id="toggler"
      key="toggler"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Другой способ
        <Svg
          className="BillingPaymentMethods__tileIcon"
          src="svgID"
        >
          <span
            className="BillingPaymentMethods__tileIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "svgID",
              }
            }
          />
        </Svg>
      </div>
    </div>
    <div
      className="BillingPaymentMethods__dropDown"
    >
      <div
        className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_yandex_money BillingPaymentMethods__tile_lastRow"
        data-method-id="yandex_money"
        key="yandex_money"
        onClick={[Function]}
      >
        <div
          className="BillingPaymentMethods__tileText"
        >
          Яндекс.Деньги
          <Svg
            className="BillingPaymentMethods__tileIcon"
            src="svgID"
          >
            <span
              className="BillingPaymentMethods__tileIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "svgID",
                }
              }
            />
          </Svg>
        </div>
      </div>
      <div
        className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_qiwi BillingPaymentMethods__tile_lastRow"
        data-method-id="qiwi"
        key="qiwi"
        onClick={[Function]}
      >
        <div
          className="BillingPaymentMethods__tileText"
        >
          QIWI Кошелек
          <Svg
            className="BillingPaymentMethods__tileIcon"
            src="svgID"
          >
            <span
              className="BillingPaymentMethods__tileIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "svgID",
                }
              }
            />
          </Svg>
        </div>
      </div>
      <div
        className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_webmoney BillingPaymentMethods__tile_lastRow"
        data-method-id="webmoney"
        key="webmoney"
        onClick={[Function]}
      >
        <div
          className="BillingPaymentMethods__tileText"
        >
          Webmoney
          <Svg
            className="BillingPaymentMethods__tileIcon"
            src="svgID"
          >
            <span
              className="BillingPaymentMethods__tileIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "svgID",
                }
              }
            />
          </Svg>
        </div>
      </div>
    </div>
  </div>
</BillingPaymentMethods>
`;

exports[`если пользователь нажал на тогглер при клике на второстепенный метод выпадашка закроется и тогглер будет содержать иконку и название выбранного метода 1`] = `
<BillingPaymentMethods
  canChangeMethod={true}
  error={Object {}}
  isMobile={false}
  onMethodChange={[Function]}
  paymentMethods={
    Array [
      Object {
        "id": "bank_card",
        "name": "Банковская карта",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "sberbank",
        "name": "Сбербанк Онлайн",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "yandex_money",
        "name": "Яндекс.Деньги",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "qiwi",
        "name": "QIWI Кошелек",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "webmoney",
        "name": "Webmoney",
        "ps_id": "YANDEXKASSA_V3",
      },
    ]
  }
  selectedMethodId="yandex_money"
>
  <div
    className="BillingPaymentMethods"
  >
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_bank_card BillingPaymentMethods__tile_lastRow"
      data-method-id="bank_card"
      key="bank_card"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Банковская карта
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_sberbank BillingPaymentMethods__tile_lastRow"
      data-method-id="sberbank"
      key="sberbank"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Сбербанк Онлайн
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_yandex_money BillingPaymentMethods__tile_active BillingPaymentMethods__tile_lastRow"
      data-method-id="toggler"
      key="toggler"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Яндекс.Деньги
        <Svg
          className="BillingPaymentMethods__tileIcon"
          src="svgID"
        >
          <span
            className="BillingPaymentMethods__tileIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "svgID",
              }
            }
          />
        </Svg>
      </div>
    </div>
  </div>
</BillingPaymentMethods>
`;

exports[`если пользователь нажал на тогглер при клике на второстепенный метод и последующем выборе основного метода тогглер сбросится в дефолтное состояние 1`] = `
<BillingPaymentMethods
  canChangeMethod={true}
  error={Object {}}
  isMobile={false}
  onMethodChange={[Function]}
  paymentMethods={
    Array [
      Object {
        "id": "bank_card",
        "name": "Банковская карта",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "sberbank",
        "name": "Сбербанк Онлайн",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "yandex_money",
        "name": "Яндекс.Деньги",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "qiwi",
        "name": "QIWI Кошелек",
        "ps_id": "YANDEXKASSA_V3",
      },
      Object {
        "id": "webmoney",
        "name": "Webmoney",
        "ps_id": "YANDEXKASSA_V3",
      },
    ]
  }
  selectedMethodId="bank_card"
>
  <div
    className="BillingPaymentMethods"
  >
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_bank_card BillingPaymentMethods__tile_active BillingPaymentMethods__tile_lastRow"
      data-method-id="bank_card"
      key="bank_card"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Банковская карта
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_sberbank BillingPaymentMethods__tile_lastRow"
      data-method-id="sberbank"
      key="sberbank"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Сбербанк Онлайн
      </div>
    </div>
    <div
      className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_toggler BillingPaymentMethods__tile_lastRow"
      data-method-id="toggler"
      key="toggler"
      onClick={[Function]}
    >
      <div
        className="BillingPaymentMethods__tileText"
      >
        Другой способ
        <Svg
          className="BillingPaymentMethods__tileIcon"
          src="svgID"
        >
          <span
            className="BillingPaymentMethods__tileIcon"
            dangerouslySetInnerHTML={
              Object {
                "__html": "svgID",
              }
            }
          />
        </Svg>
      </div>
    </div>
  </div>
</BillingPaymentMethods>
`;

exports[`правильно рисует компонент для десктопа 1`] = `
<div
  className="BillingPaymentMethods"
>
  <div
    className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_bank_card BillingPaymentMethods__tile_active BillingPaymentMethods__tile_lastRow"
    data-method-id="bank_card"
    key="bank_card"
    onClick={[Function]}
  >
    <div
      className="BillingPaymentMethods__tileText"
    >
      Банковская карта
    </div>
  </div>
  <div
    className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_sberbank BillingPaymentMethods__tile_lastRow"
    data-method-id="sberbank"
    key="sberbank"
    onClick={[Function]}
  >
    <div
      className="BillingPaymentMethods__tileText"
    >
      Сбербанк Онлайн
    </div>
  </div>
  <div
    className="BillingPaymentMethods__tile BillingPaymentMethods__tile_type_toggler BillingPaymentMethods__tile_lastRow"
    data-method-id="toggler"
    key="toggler"
    onClick={[Function]}
  >
    <div
      className="BillingPaymentMethods__tileText"
    >
      Другой способ
      <Svg
        className="BillingPaymentMethods__tileIcon"
        src="svgID"
      />
    </div>
  </div>
</div>
`;
